--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,14 @@ h3{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    padding: 50vh;
+    padding: 20vh;
 }
 #tabela {
     box-sizing: content-box;
-    border: 2px solid rgb(226, 108, 108);
+    border: 0.5vh solid rgb(226, 108, 108);
     width:  100%;
     margin: 0 auto;
-    padding: 20px;
+    padding: 20vh;
     background-color: rgb(255, 255, 255);
 }
 
